Revamp pricing cards and update color scheme
Introduced new CSS classes and structure for three distinct pricing cards: consultancy, one-time, and subscription, each with unique color schemes and layouts. Updated color variables throughout the site for improved consistency and accessibility, especially in the footer, FAQ, contact, and portfolio details sections. Commented out unused team members and copyright sections in HTML files, and adjusted the pricing section markup to use the new card classes. Minor UI tweaks were made to buttons and badges for a more cohesive look.

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="team-member d-flex">
               <div class="member-img">
                 <img src="assets/img/person/person-m-12.webp" class="img-fluid" alt="" loading="lazy">
@@ -1215,9 +1215,9 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="600">
             <div class="team-member d-flex">
               <div class="member-img">
                 <img src="assets/img/person/person-f-9.webp" class="img-fluid" alt="" loading="lazy">
@@ -1235,7 +1235,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member -->
 
         </div>
 
@@ -1257,32 +1257,32 @@
         <div class="row gy-4">
           <!-- Basic Plan -->
           <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-            <div class="pricing-card">
-              <div class="plan-header">
+            <div class="pricing-card-consultancy">
+              <div class="plan-header-consultancy">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-box"></i> -->
                   <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
-                <h3>Starter</h3>
+                <h3>Consultation</h3>
                 <p>For individuals just getting started</p>
               </div>
-              <div class="plan-pricing">
+              <div class="plan-pricing-consultancy">
                 <div class="price">
                   <span class="currency">$</span>
                   <span class="amount">12</span>
                   <span class="period">/month</span>
                 </div>
               </div>
-              <div class="plan-features">
+              <div class="plan-features-consultancy">
                 <ul>
                   <li><i class="bi bi-check-circle-fill"></i> Nullam accumsan lorem</li>
                   <li><i class="bi bi-check-circle-fill"></i> Vestibulum auctor dapibus</li>
                   <li><i class="bi bi-check-circle-fill"></i> Nulla consequat massa</li>
-                  <li class="disabled"><i class="bi bi-x-circle-fill"></i> In enim justo rhoncus ut</li>
-                  <li class="disabled"><i class="bi bi-x-circle-fill"></i> Curabitur ullamcorper ultricies</li>
+                  <!-- <li class="disabled"><i class="bi bi-x-circle-fill"></i> In enim justo rhoncus ut</li> -->
+                  <!-- <li class="disabled"><i class="bi bi-x-circle-fill"></i> Curabitur ullamcorper ultricies</li> -->
                 </ul>
               </div>
-              <div class="plan-cta">
+              <div class="plan-cta-consultancy">
                 <a href="#" class="btn-plan">Choose Plan</a>
               </div>
             </div>
@@ -1290,33 +1290,33 @@
 
           <!-- Professional Plan -->
           <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-            <div class="pricing-card popular">
+            <div class="pricing-card-onetime popular">
               <div class="popular-tag">Most Popular</div>
-              <div class="plan-header">
+              <div class="plan-header-onetime">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-briefcase"></i> -->
                   <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
-                <h3>Professional</h3>
-                <p>For small teams and growing businesses</p>
+                <h3>One Time</h3>
+                <p>For small teams and businesses</p>
               </div>
-              <div class="plan-pricing">
+              <div class="plan-pricing-onetime">
                 <div class="price">
                   <span class="currency">$</span>
                   <span class="amount">39</span>
                   <span class="period">/month</span>
                 </div>
               </div>
-              <div class="plan-features">
+              <div class="plan-features-onetime">
                 <ul>
                   <li><i class="bi bi-check-circle-fill"></i> Donec quam felis ultricies</li>
                   <li><i class="bi bi-check-circle-fill"></i> Nam eget dui etiam rhoncus</li>
                   <li><i class="bi bi-check-circle-fill"></i> Maecenas tempus tellus</li>
                   <li><i class="bi bi-check-circle-fill"></i> Donec pede justo fringilla</li>
-                  <li class="disabled"><i class="bi bi-x-circle-fill"></i> Cras dapibus vivamus</li>
+                  <!-- <li class="disabled"><i class="bi bi-x-circle-fill"></i> Cras dapibus vivamus</li> -->
                 </ul>
               </div>
-              <div class="plan-cta">
+              <div class="plan-cta-onetime">
                 <a href="#" class="btn-plan">Choose Plan</a>
               </div>
             </div>
@@ -1324,23 +1324,23 @@
 
           <!-- Enterprise Plan -->
           <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-            <div class="pricing-card">
-              <div class="plan-header">
+            <div class="pricing-card-subscription">
+              <div class="plan-header-subscription">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-building"></i> -->
                   <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
-                <h3>Enterprise</h3>
+                <h3>Subscription</h3>
                 <p>For large organizations and corporations</p>
               </div>
-              <div class="plan-pricing">
+              <div class="plan-pricing-subscription">
                 <div class="price">
                   <span class="currency">$</span>
                   <span class="amount">79</span>
                   <span class="period">/month</span>
                 </div>
               </div>
-              <div class="plan-features">
+              <div class="plan-features-subscription">
                 <ul>
                   <li><i class="bi bi-check-circle-fill"></i> Etiam sit amet orci eget</li>
                   <li><i class="bi bi-check-circle-fill"></i> Pellentesque posuere vulputate</li>
@@ -1349,7 +1349,7 @@
                   <li><i class="bi bi-check-circle-fill"></i> Phasellus viverra nulla</li>
                 </ul>
               </div>
-              <div class="plan-cta">
+              <div class="plan-cta-subscription">
                 <a href="#" class="btn-plan">Choose Plan</a>
               </div>
             </div>
@@ -1635,13 +1635,13 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <!-- <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Fooliz Studio</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
         Designed by <a href="#team">Nerds</a>
       </div>
-    </div>
+    </div> -->
 
   </footer>
 
