--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -261,7 +261,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="#" class="btn-view-project">View Live Project</a>
-                <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <!-- <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a> -->
               </div>
             </div>
           </div>
@@ -324,12 +324,12 @@
       </div>
     </div>
 
-    <div class="container copyright text-center mt-4">
+    <!-- <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Fooliz Studio</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         Designed by <a href="#team">Nerds</a>
       </div>
-    </div>
+    </div> -->
 
   </footer>
 
