--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
                   <div class="feature-item-beige">
                     <!-- <i class="bi bi-lightbulb-fill"></i> -->
-                    <img src="assets/img/icons/always-on.png" alt="Future Ready Icon" class="feature-icon">
+                    <img src="assets/img/icons/launch-ready.png" alt="Future Ready Icon" class="feature-icon">
                     <h5>Future-Ready by Default</h5>
                     <p>We don’t just follow trends — we blueprint what’s next.
                       Your brand deserves more than "meh" ideas and version 1.0 thinking.</p>
@@ -391,7 +391,7 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-gem"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/web-development.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -412,7 +412,7 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-megaphone"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/branding.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -420,7 +420,8 @@
               </a>
               <h3>
                 <a href="service-details.html">
-                  Creative <span>designs</span>
+                  Branding & <span>Identity Design
+                  </span>
                 </a>
               </h3>
               <p>
@@ -433,7 +434,7 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-code-slash"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/social-media.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -441,7 +442,7 @@
               </a>
               <h3>
                 <a href="service-details.html">
-                  Content <span>creation</span>
+                  Content Marketing & <span>Management</span>
                 </a>
               </h3>
               <p>
@@ -454,7 +455,7 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-graph-up"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/ui-ux.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -462,7 +463,7 @@
               </a>
               <h3>
                 <a href="service-details.html">
-                  Dummy <span>text</span>
+                  UI & UX <span>Design</span>
                 </a>
               </h3>
               <p>
@@ -475,7 +476,7 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-camera-video"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/strategy.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <a href="service-details.html"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
@@ -483,7 +484,7 @@
               </a>
               <h3>
                 <a href="service-details.html">
-                  Dummy <span>text</span>
+                  Content <span>Strategy</span>
                 </a>
               </h3>
               <p>
@@ -515,7 +516,7 @@
             <div class="step-content">
               <div class="step-icon">
                 <!-- <i class="bi bi-lightbulb"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/initial-consut.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 01</span>
@@ -529,7 +530,7 @@
             <div class="step-content">
               <div class="step-icon">
                 <!-- <i class="bi bi-gear"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/planning.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 02</span>
@@ -543,7 +544,7 @@
             <div class="step-content">
               <div class="step-icon">
                 <!-- <i class="bi bi-bar-chart"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/build-mode.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 03</span>
@@ -557,7 +558,7 @@
             <div class="step-content">
               <div class="step-icon">
                 <!-- <i class="bi bi-check2-circle"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/launch-.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="step-info">
                 <span class="step-number">Step 04</span>
@@ -819,13 +820,13 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">
-              <!-- <i class="bi bi-grid-3x3"></i>  -->
-              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              <i class="bi bi-grid-3x3"></i> 
+              <!-- <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img"> -->
               All Projects
             </li>
             <li data-filter=".filter-ui">
               <!-- <i class="bi bi-phone"></i>  -->
-              <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img">
+              <img src="assets/img/icons/ui-ux-p.png" alt="Website Development Icon" class="portfolio-icon-img">
               UI/UX
             </li>
             <li data-filter=".filter-development">
@@ -1261,7 +1262,7 @@
               <div class="plan-header-consultancy">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-box"></i> -->
-                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/icons/starter.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Consultation</h3>
                 <p>For individuals just getting started</p>
@@ -1295,7 +1296,7 @@
               <div class="plan-header-onetime">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-briefcase"></i> -->
-                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/icons/professional.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>One Time</h3>
                 <p>For small teams and businesses</p>
@@ -1328,7 +1329,7 @@
               <div class="plan-header-subscription">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-building"></i> -->
-                  <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/icons/enterprise.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Subscription</h3>
                 <p>For large organizations and corporations</p>
@@ -1459,7 +1460,7 @@
             <div class="contact-info-box">
               <div class="icon-box">
                 <!-- <i class="bi bi-geo-alt"></i> -->
-                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/location.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Our Address</h4>
@@ -1472,7 +1473,7 @@
             <div class="contact-info-box">
               <div class="icon-box">
                 <!-- <i class="bi bi-envelope"></i> -->
-                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/email.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Email Address</h4>
@@ -1486,7 +1487,7 @@
             <div class="contact-info-box">
               <div class="icon-box">
                 <!-- <i class="bi bi-headset"></i> -->
-                <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
+                <img src="assets/img/icons/contact.png" alt="Website Development Icon" class="service-icon-img">
               </div>
               <div class="info-content">
                 <h4>Hours of Operation</h4>
