--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -97,11 +97,9 @@
       <div class="first-layout-portfolio">
         <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Image" class="img-fluid">
         <h1>Portfolio Details</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-          molestias.</p>
       </div>
 
-      <section class="portfolio-details section">
+      <section class="portfolio-details-top">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-6" data-aos="fade-left">
             <div class="portfolio-details-content">
