Update service links and names in index and portfolio pages
Changed service action links in index.html to point to the contact section and updated service names in the footer for both index.html and portfolio-details.html to be more descriptive. Footer service links in portfolio-details.html now reference index.html#services for consistency.

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                   From design to deployment, we craft digital experiences that are bold, fast, and built to grow.
                   No cookie-cutter stuff — just tailored tools that actually move the needle.
                 </p>
-                <a href="services.html" class="service-btn">
-                  view all services
+                <a href="#contact" class="service-btn">
+                  book a service
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -372,12 +372,12 @@
                 <!-- <i class="bi bi-palette"></i> -->
                 <img src="assets/img/icons/mobile-apps.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   Mobile Apps <span>development</span>
                 </a>
               </h3>
@@ -393,12 +393,12 @@
                 <!-- <i class="bi bi-gem"></i> -->
                 <img src="assets/img/icons/web-development.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   Website <span>development</span>
                 </a>
               </h3>
@@ -414,12 +414,12 @@
                 <!-- <i class="bi bi-megaphone"></i> -->
                 <img src="assets/img/icons/branding.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   Branding & <span>Identity Design
                   </span>
                 </a>
@@ -436,12 +436,12 @@
                 <!-- <i class="bi bi-code-slash"></i> -->
                 <img src="assets/img/icons/social-media.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   Content Marketing & <span>Management</span>
                 </a>
               </h3>
@@ -457,12 +457,12 @@
                 <!-- <i class="bi bi-graph-up"></i> -->
                 <img src="assets/img/icons/ui-ux.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   UI & UX <span>Design</span>
                 </a>
               </h3>
@@ -478,12 +478,12 @@
                 <!-- <i class="bi bi-camera-video"></i> -->
                 <img src="assets/img/icons/strategy.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="service-details.html"
+              <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a>
                   Content <span>Strategy</span>
                 </a>
               </h3>
@@ -1622,10 +1622,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#services">Mobile Apps</a></li>
-            <li><a href="#services">Websites</a></li>
-            <li><a href="#services">Creative Designs</a></li>
-            <li><a href="#services">Content Creation</a></li>
+            <li><a href="#services">Mobile Apps Development</a></li>
+            <li><a href="#services">Websites Development</a></li>
+            <li><a href="#services">Branding & Identity Design</a></li>
+            <li><a href="#services">Content Marketing & Management</a></li>
+            <li><a href="#services">UI & UX Design</a></li>
+            <li><a href="#services">Content Strategy</a></li>
           </ul>
         </div>
 
