--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -356,10 +356,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#services">Mobile Apps</a></li>
-            <li><a href="#services">Websites</a></li>
-            <li><a href="#services">Creative Designs</a></li>
-            <li><a href="#services">Content Creation</a></li>
+            <li><a href="index.html#services">Mobile Apps Development</a></li>
+            <li><a href="index.html#services">Websites Development</a></li>
+            <li><a href="index.html#services">Branding & Identity Design</a></li>
+            <li><a href="index.html#services">Content Marketing & Management</a></li>
+            <li><a href="index.html#services">UI & UX Design</a></li>
+            <li><a href="index.html#services">Content Strategy</a></li>
           </ul>
         </div>
 
