--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
               </div>
 
-              <a href="#" class="btn btn-primary mt-4">explore our services</a>
+              <a href="#services" class="btn btn-primary mt-4">explore our services</a>
             </div>
           </div>
         </div>
@@ -238,11 +238,16 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="rating mb-3">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star1.png" style="width: 1.7rem; height: 1.7rem;">
+                        <!-- <i class="bi bi-star-fill"></i> -->
+                        <!-- <i class="bi bi-star-fill"></i> -->
+                        <!-- <i class="bi bi-star-fill"></i> -->
+                        <!-- <i class="bi bi-star-fill"></i> -->
+                        <!-- <i class="bi bi-star-fill"></i> -->
                       </div>
                       <p>"Their strategic vision and unwavering commitment to results provided exceptional value. Our
                         operational efficiency has signficantly improved."</p>
@@ -259,11 +264,16 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="rating mb-3">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star1.png" style="width: 1.7rem; height: 1.7rem;">
+                        <!-- <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star-half"></i> -->
                       </div>
                       <p>"Collaborating with their team was a revelation. Their innovative strategies guided us toward
                         achieving our objectives with precision and speed."</p>
@@ -280,11 +290,16 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="rating mb-3">
+                       <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <!-- <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i> -->
                       </div>
                       <p>"The depth of knowledge and unwavering dedication they bring to every project is exceptional.
                         They've become an essential ally in driving our expansion."</p>
@@ -301,11 +316,16 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="rating mb-3">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star1.png" style="width: 1.7rem; height: 1.7rem;">
+                        <!-- <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-half"></i>
+                        <i class="bi bi-star-half"></i> -->
                       </div>
                       <p>"Their dedication to delivering superior solutions and their meticulous attention to detail
                         have profoundly impacted our corporate growth trajectory."</p>
@@ -370,12 +390,12 @@
             <div class="service-card position-relative z-1">
               <div class="service-icon">
                 <!-- <i class="bi bi-palette"></i> -->
-                <img src="assets/img/icons/mobile-apps.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/about/about-portrait-1.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   Mobile Apps <span>development</span>
@@ -393,10 +413,10 @@
                 <!-- <i class="bi bi-gem"></i> -->
                 <img src="assets/img/icons/web-development.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   Website <span>development</span>
@@ -414,10 +434,10 @@
                 <!-- <i class="bi bi-megaphone"></i> -->
                 <img src="assets/img/icons/branding.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   Branding & <span>Identity Design
@@ -436,10 +456,10 @@
                 <!-- <i class="bi bi-code-slash"></i> -->
                 <img src="assets/img/icons/social-media.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   Content Marketing & <span>Management</span>
@@ -457,10 +477,10 @@
                 <!-- <i class="bi bi-graph-up"></i> -->
                 <img src="assets/img/icons/ui-ux.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   UI & UX <span>Design</span>
@@ -478,10 +498,10 @@
                 <!-- <i class="bi bi-camera-video"></i> -->
                 <img src="assets/img/icons/strategy.png" alt="Website Development Icon" class="service-icon-img">
               </div>
-              <a href="#contact"
+              <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a>
+              </a> -->
               <h3>
                 <a>
                   Content <span>Strategy</span>
@@ -1337,7 +1357,7 @@
                   <img src="assets/img/icons/enterprise.png" alt="Website Development Icon" class="service-icon-img">
                 </div>
                 <h3>Subscription</h3>
-                <p>For large organizations and corporations</p>
+                <p>For large organizations</p>
               </div>
               <div class="plan-pricing-subscription">
                 <div class="price">
