Redesign service card layout and update index.html
Refactored the .service-card CSS for a more modern, interactive layout with improved hover effects and consistent sizing. Updated index.html to use the new service card structure, cleaned up markup, and fixed minor formatting issues in the portfolio and form sections.

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="rating mb-3">
-                       <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
+                        <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
                         <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
                         <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
                         <img src="assets/img/icons/star.png" style="width: 1.7rem; height: 1.7rem;">
@@ -386,16 +386,35 @@
         </div>
 
         <div class="row justify-content-center">
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <!-- <i class="bi bi-palette"></i> -->
+                <img src="assets/img/about/about-portrait-1.png" alt="Mobile Apps Icon" class="service-icon-img">
+              </div>
+              <div class="content-area">
+                <h3>
+                  <a>
+                    Mobile Apps <span>development</span>
+                  </a>
+                </h3>
+                <p>
+                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-card position-relative z-1">
+              <div class="service-icon">
+                <!-- <i class="bi bi-palette"></i> 
                 <img src="assets/img/about/about-portrait-1.png" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <!-- <a href="#contact"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
-              </a> -->
+              </a> 
               <h3>
                 <a>
                   Mobile Apps <span>development</span>
@@ -406,7 +425,7 @@
                 Code? Clean. UX? Addictive. Results? Ask our clients.
               </p>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -842,19 +861,19 @@
             <li data-filter="*" class="filter-active">
               <!-- <i class="bi bi-grid-3x3"></i>  -->
               <!-- <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img"> -->
-               <span class="portfolio-icon-img all-projects-icon"></span>
+              <span class="portfolio-icon-img all-projects-icon"></span>
               All Projects
             </li>
-             <li data-filter=".filter-development">
+            <li data-filter=".filter-development">
               <!-- <i class="bi bi-code-slash"></i>  -->
               <!-- <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img"> -->
-               <span class="portfolio-icon-img development-icon"></span>
+              <span class="portfolio-icon-img development-icon"></span>
               Development
             </li>
             <li data-filter=".filter-ui">
               <!-- <i class="bi bi-phone"></i>  -->
               <!-- <img src="assets/img/icons/ui-ux-p.png" alt="Website Development Icon" class="portfolio-icon-img"> -->
-               <span class="portfolio-icon-img ui-icon"></span>
+              <span class="portfolio-icon-img ui-icon"></span>
               UI/UX
             </li>
             <li data-filter=".filter-creative">
@@ -866,7 +885,7 @@
             <li data-filter=".filter-marketing">
               <!-- <i class="bi bi-graph-up"></i>  -->
               <!-- <img src="assets/img/icons/ui-uix-p.png" alt="Website Development Icon" class="portfolio-icon-img"> -->
-               <span class="portfolio-icon-img marketing-icon"></span>
+              <span class="portfolio-icon-img marketing-icon"></span>
               Marketing
             </li>
           </ul>
@@ -1548,7 +1567,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-person"></i>
-                         <!-- <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img"> -->
+                        <!-- <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img"> -->
                         <input type="text" class="form-control" name="name" placeholder="First Name" required="">
                       </div>
                     </div>
